Staging index and mystats html files

--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
         <p><b>Bali</b> is located in <b>IndoneAsia</b>  it is a place where it is sourrounded by Ocean
         and it is Famous For natural settings, scenic beaches, traditional culture, rich history,
          creativity, art and crafts, and the genuine warmth of the local people. </p>
+         <hr>
+         <h2>Activities</h2>
+         <ol>
+            <li>Swimming</li>
+            <li>Surfing</li>
+         <li>paraGliding</li>
+        </ol>
+        <ul>
+            <li>Paneer Fry</li>
+            <li>Paneer Biryani</li>
+            <li>Mushroom Biryani</li>
+
+        </ul>
+        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/mystats.html">mystats</a>
     </body>
 </html>
