--- a/mystats.html
+++ b/mystats.html
@@ -13,6 +13,7 @@
         <p>Payasam is one of the Traditional foods in india it is sweet.Mostly This Food is Prepared At the time Of Festivals And Also in some Other Occations
             The People who lives in Southeren part of india Mostly Know the Reciepe of this.
         </p>
+        <img src="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/Pic.jpg",length="100px",width="100px",alternative="Food">
         
 
 
