Staged index and mystats

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li>Mushroom Biryani</li>
 
         </ul>
-        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/mystats.html">mystats</a>
+        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/mystats.html">MYSTATS</a>
+        
     </body>
 </html>
