--- a/mystats.html
+++ b/mystats.html
@@ -13,8 +13,31 @@
         <p>Payasam is one of the Traditional foods in india it is sweet.Mostly This Food is Prepared At the time Of Festivals And Also in some Other Occations
             The People who lives in Southeren part of india Mostly Know the Reciepe of this.
         </p>
-        <img src="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/Pic.jpg",length="100px",width="100px",alternative="Food">
-        
+      <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/Pic.jpg">Food Image</a>
+        <hr>
+        <h1>SPORTS</h1>
+        <p>Four kinds of Sports that I reccomende to everyone those are archery,chess,tennis,volley ball these sports may improve the intelectual skills and also physical Fitness of a athelete. </p>
+        <table border="10px">
+            <tr>
+                <th>NAME OF A SPORT</th>
+                <th>REASON</th>
+                <th>Hours</th>
+
+            </tr>
+            <tr><td>Archery</td><td>Mind Game</td><td>5</td></tr>
+            <tr><td>Chess</td><td>Mind Game</td><td>6</td></tr>
+            <tr><td>Tennis</td><td>Fitness</td><td>5</td></tr>
+            <tr><td>Volley Ball</td><td>Fitness</td><td>6</td></tr>
+        </table>
+        <hr>
+        <h1>PHP</h1>
+        <pre>
+            $execution_time = microtime(); // Start counting
+            // Your code
+            $execution_time = microtime() - $execution_time;
+            printf('It took %.5f sec', $execution_time);
+        </pre>
+
 
 
     </body>
