--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Introduction</title>
     </head>
     <body>
+        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/bonus.html",color=yellow>Bonus</a>
         <h1>Bala Venkata Sai Kishore Vattumilli</h1>
         <h6>Bali</h6>
         <p><b>Bali</b> is located in <b>IndoneAsia</b>  it is a place where it is sourrounded by Ocean
@@ -13,7 +14,15 @@
          <h2>Activities</h2>
          <ol>
             <li>Swimming</li>
-            <li>Surfing</li>
+            <li>Surfing
+                <ol>
+                    <li>
+                        Knee Boarding
+                    </li>
+                    <li>Body Boarding</li>
+                    <li>Surf Ski</li>
+                </ol>
+            </li>
          <li>paraGliding</li>
         </ol>
         <ul>
