--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Mushroom Biryani</li>
 
         </ul>
-        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/mystats.html">MYSTATS</a>
+        <a href="mystats.html">MYSTATS</a>
         
     </body>
 </html>
