--- a/bonus.html
+++ b/bonus.html
@@ -5,9 +5,9 @@
 
     </head>
     <body>
-        <h1>Vicky Brain</h1>
+        <h1>Vicky Bussiness Intelligence Developer</h1>
         <p>I am Introducing A character Named Vicky Brain Coming To his Character he is a very good person and always use to mingle with others.And he loves to travel through all over the world.
-            He is a foody and loves every one.he usually crack the jokes with his friends. 
+            He is a foody and loves every one.he usually crack the jokes with his friends.He is working as bussiness intellegent working as a employee in a reputed company. 
 
         </p>
         <h2>Personality Character</h2>
