--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Introduction</title>
     </head>
     <body>
-        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/bonus.html",color=yellow>Bonus</a>
+        <a href="bonus.html">Bonus</a>
         <h1>Bala Venkata Sai Kishore Vattumilli</h1>
         <h6>Bali</h6>
         <p><b>Bali</b> is located in <b>IndoneAsia</b>  it is a place where it is sourrounded by Ocean
