--- a/mystats.html
+++ b/mystats.html
@@ -13,11 +13,11 @@
         <p>Payasam is one of the Traditional foods in india it is sweet.Mostly This Food is Prepared At the time Of Festivals And Also in some Other Occations
             The People who lives in Southeren part of india Mostly Know the Reciepe of this.
         </p>
-      <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-VBSKishore/blob/main/Pic.jpg">Food Image</a>
+      <img src="Pic.jpg",alt="Food Image">
         <hr>
         <h1>SPORTS</h1>
         <p>Four kinds of Sports that I reccomende to everyone those are archery,chess,tennis,volley ball these sports may improve the intelectual skills and also physical Fitness of a athelete. </p>
-        <table border="5px",backgroundcolor=yellow>
+        <table border="5px">
             <tr>
                 <th>NAME OF A SPORT</th>
                 <th>REASON</th>
@@ -29,7 +29,7 @@
             <tr><td>Tennis</td><td>Fitness</td><td>5</td></tr>
             <tr><td>Volley Ball</td><td>Fitness</td><td>6</td></tr>
         </table>
-        <hr>
+       <hr>
         <h1>JQUERY</h1>
         <blockquote cite="https://stackoverflow.com/questions/5489946/how-to-wait-for-the-end-of-resize-event-and-only-then-perform-an-action">How to wait for the 'end' of 'resize' event and only then perform an action?</blockquote>
         <a href="https://stackoverflow.com/questions/5489946/how-to-wait-for-the-end-of-resize-event-and-only-then-perform-an-action">Stack OverFlow</a>
@@ -42,6 +42,7 @@
                      }, 250);
                     });
         </pre>
+        
         
 
 
