--- a/bonus.html
+++ b/bonus.html
@@ -22,7 +22,7 @@
                 tall
             </li>
         </ol>
-        <img src="C:\Users\S564868\Documents\FALL 2023\44563-webapps-f23-assignment3-VBSKishore\image.jpeg",alt="Fiction Image"length="100px",width="100px" >
+        <img src="image.jpeg",alt="Fiction Image"> 
 
     </body>
 </html>
