--- a/bonus.html
+++ b/bonus.html
@@ -22,7 +22,7 @@
                 tall
             </li>
         </ol>
-        <img src="image.jpeg",alt="Fiction Image"> 
+        <img src="image.jpeg"> 
 
     </body>
 </html>
