commiting mystats.html

--- a/mystats.html
+++ b/mystats.html
@@ -43,6 +43,8 @@
                      }, 250);
                     });
         </pre>
+        <a href="https://css-tricks.com/snippets/jquery/track-window-resizes-through-google-analytics/">Jquery</a>
+
         
         
 
