--- a/bonus.html
+++ b/bonus.html
@@ -22,7 +22,8 @@
                 tall
             </li>
         </ol>
-        <img src="image.jpeg"> 
+        <img src="image.jpeg">
+        <a href="index.html">Index Page</a> 
 
     </body>
 </html>
